# Son

./: README.md  json.abnf  son.ebnf
diagrams/: README.md
implementation/: MIT-LICENSE.txt  Main.hs  README.md  shell.nix  son.cabal  stack.yaml
implementation/src/: Main.hs  Son.hs
implementation/src/Son/: Generator.hs  Parser.hs
implementation/test/: JQ.hs  Test.hs
